--- a/dasshutu.html
+++ b/dasshutu.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>クイズページ</title>
+  <title>てらめたる学園に隠されし秘宝</title>
 
   <link rel="stylesheet" href="./quiz_files/main.css">
 </head>
@@ -17,67 +17,85 @@
 
     <!-- 画像表示部分 -->
     <div class="quiz-image">
-      <img src="./quiz_files/still_3.jpg" alt="クイズ画像" id="quizImage">
+      <!-- <img src="./quiz_files/still_3.jpg" alt="クイズ画像" id="quizImage"> -->
+      <img src="./quiz_files/still_3.png" alt="クイズ画像" id="quizImage">
     </div>
 
     <!-- ストーリー文 -->
     <p>エニ先生と怪盗20と共に、隠し部屋に閉じ込められてしまった！<br>
       なんとかして隠し部屋から脱出しよう！<br>
       <br>
-      <span class = "txt_red">セキュリティ解除マニュアルに記載されている2つのボタンのありかを記入し、それぞれのボタンを押す人物を指定しよう<span>
+      <span class = "txt_red">セキュリティ解除マニュアルに記載されている2つのボタンのありかを記入し、それぞれのボタンを押す人物を指定しよう!<span>
     </p>
 
     <!-- 答え入力フォーム -->
     <div class="answer-section">
-      <p>ボタンの場所１：<input type="text" id="Q1" placeholder="" class = "border_black">の中</p>
 
-      <!-- <p>ボタンの場所１：
-      <select id="Q1" class = "border_red">
-        <option value="">選択してください</option>
-        <option value="液体窒素">液体窒素</option>
-        <option value="B">B</option>
-        <option value="C">C</option>
-      </select>
-      の中
-      </p> -->
+      <div class = "flex_box">
+        <img src="./quiz_files/button1.png" alt="ボタン１の画像" class = "button_img">
 
-      <!-- <p>押す人１：<input type="text" id="Q2" placeholder=""><br></p> -->
+        <div class = "answer_box">
+          <p>ボタンの場所：<input type="text" id="Q1" placeholder="" class = "border_black">の中</p>
 
-      <p>押す人１：
-        <select id="Q2" class = "border_green">
-          <option value="">選択してください</option>
-          <option value="怪盗20">怪盗20</option>
-          <option value="B">B</option>
-          <option value="C">C</option>
-        </select>
-        の中
-        </p>
+          <!-- <p>ボタンの場所１：
+          <select id="Q1" class = "border_red">
+            <option value="">選択してください</option>
+            <option value="液体窒素">液体窒素</option>
+            <option value="B">B</option>
+            <option value="C">C</option>
+          </select>
+          の中
+          </p> -->
+
+          <!-- <p>押す人１：<input type="text" id="Q2" placeholder=""><br></p> -->
+          <p>押す人：
+            <select id="Q2" class = "border_black">
+              <option value="">選択してください</option>
+              <option value="数多エニ">数多エニ</option>
+              <option value="音子・エネルジコ">音子・エネルジコ</option>
+              <option value="幽ヶ浦もち">幽ヶ浦もち</option>
+              <option value="ノピ・テュルーペ">ノピ・テュルーペ</option>
+              <option value="怪盗20">怪盗20</option>
+            </select>
+          </p>
+        </div>
+
+      </div>
+
+      <div class = "margin">　</div>
     
       <div class = "margin">　</div>
 
-      <p>ボタンの場所２：<input type="text" id="Q3" placeholder="" class = "border_red">の近く</p>
+      <div class = "flex_box">
+        <img src="./quiz_files/button2.png" alt="ボタン２の画像" class = "button_img">
 
-      <!-- <p>ボタンの場所２：
-        <select id="Q3" class = "border_red">
-          <option value="">選択してください</option>
-          <option value="音楽室">音楽室</option>
-          <option value="B">B</option>
-          <option value="C">C</option>
-        </select>
-        の中
-        </p> -->
+        <div class = "answer_box">
+          <p>ボタンの場所：<input type="text" id="Q3" placeholder="" class = "border_red">の近く</p>
 
-      <!-- <p>押す人２：<input type="text" id="Q4" placeholder=""><br></p> -->
+          <!-- <p>ボタンの場所２：
+            <select id="Q3" class = "border_red">
+              <option value="">選択してください</option>
+              <option value="音楽室">音楽室</option>
+              <option value="B">B</option>
+              <option value="C">C</option>
+            </select>
+            の中
+            </p> -->
 
-      <p>押す人２：
-        <select id="Q4" class = "border_green">
-          <option value="">選択してください</option>
-          <option value="音子・エネルジコ">音子・エネルジコ</option>
-          <option value="B">B</option>
-          <option value="C">C</option>
-        </select>
-        の中
-        </p>
+          <!-- <p>押す人２：<input type="text" id="Q4" placeholder=""><br></p> -->
+
+          <p>押す人：
+            <select id="Q4" class = "border_black">
+              <option value="">選択してください</option>
+              <option value="数多エニ">数多エニ</option>
+              <option value="音子・エネルジコ">音子・エネルジコ</option>
+              <option value="幽ヶ浦もち">幽ヶ浦もち</option>
+              <option value="ノピ・テュルーペ">ノピ・テュルーペ</option>
+              <option value="怪盗20">怪盗20</option>
+            </select>
+          </p>
+        </div>
+      </div>
 
     </div>
     
@@ -86,9 +104,6 @@
 
     <div class = "margin">　</div>
 
-    <!-- ヒントボタン -->
-    <button id="hintButton">ヒントを表示</button>
-    <p id="hint" style="display:none;">ヒント: 無いってわかってるのに開けましたね</p>
   </div>
 </body>
 
