--- a/nekomata.html
+++ b/nekomata.html
@@ -29,8 +29,11 @@
       <span class = "txt_red">てらめたる学園から音子先生のいるカフェまでの道をたどり<br>通ったひらがなを読もう！</span>
     </p>
 
+    <div class = "margin">　</div>
 
-    <h3>地図で表されているもの</h3>
+    <div class = "margin">　</div>
+
+    <span class = "title_txt">地図で表されているもの</span>
     <img src="./quiz_files/mapicon.png" alt="クイズ画像" class = "icon">
 
 
