--- a/ending.html
+++ b/ending.html
@@ -25,13 +25,23 @@
       <iframe width="560" height="315" src="https://www.youtube.com/embed/1771pZ3iRog?si=29mXJWlsNorakrtE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
 
+    <div class = "margin">　</div>
+    <div class = "margin">　</div>
+
     <div class="quiz-title">
-      <h3>ありがとうございました的な文章</h3>
+      <h1 class="txt_red">クリアおめでとうございます！</h1>
+      <h3>
+        遊んでいただきありがとうございました！<br>
+        <br>　
+        こちらのクリア画像はSNSに投稿してOKです！<br>
+        ぜひ感想も一緒にご投稿ください！<br>
+        （めっちゃエゴサします）
+      </h3>
     </div>
 
     <!-- <button onclick="location.href='./opening.html'" id="submitAnswer">Xに感想を投稿する</button> -->
 
-    <button onclick="postToX()" id="submitAnswer">Xに感想を投稿する</button>
+    <button onclick="postToX()" id="submitAnswer">クリアしたことをXで報告する！</button>
     
   </div>
 </body>
