--- a/nekomata.html
+++ b/nekomata.html
@@ -22,11 +22,11 @@
     </div>
 
     <!-- ストーリー文 -->
-    <p>カフェにいる音子先生のもとへ、鍵を受け取りに行くというエニ先生。<br>
-      でもエニ先生は方向音痴で、道順が分からないみたい。<br>
-      仕方がないから、エニ先生にカフェまでの道を教えてあげよう！<br>
+    <p>カフェにいる音子先生のもとへ、<br>鍵を受け取りに行くというエニ先生。<br>
+      でもエニ先生は方向音痴で、<br>道順が分からないみたい。<br>
+      仕方がないから、エニ先生に<br>カフェまでの道を教えてあげよう！<br>
       <br>
-      <span class = "txt_red">てらめたる学園から音子先生のいるカフェまでの道をたどり<br>通ったひらがなを読もう！</span>
+      <span class = "txt_red">てらめたる学園から<br>音子先生のいるカフェまでの道をたどり<br>通ったひらがなを読もう！</span>
     </p>
 
     <div class = "margin">　</div>
@@ -39,7 +39,7 @@
 
     <!-- 答え入力フォーム -->
     <div class="answer-section center">
-      <p>通ったひらがなは<input type="text" id="Q1" placeholder=""><br></p>
+      <p><span class = "nekomata-p">通ったひらがなは<span><input type="text" id="Q1" placeholder=""><br></p>
     </div>
     
     <button onclick="checkAnswers_Q2()" id="submitAnswer">回答</button>
@@ -48,22 +48,44 @@
     <div class = "margin">　</div>
 
     <!-- ヒントボタン -->
-    <button id="hintButton">ヒントを表示</button>
+    <button id="hintButton">エニ先生に相談する（ヒント）</button>
     <div class="hint-container" id="hintContainer" style="display: none;">
-        <div class="hint" onclick="toggleHint(1)">ヒント1</div>
-        <div id="hint1" class="hint-content">
-            ああああああああ
-            <div class="hint" onclick="toggleHint(2)">ヒント2</div>
-            <div id="hint2" class="hint-content">
-                ああああああああ
-                <div class="hint" onclick="toggleHint(3)">ヒント3</div>
-                <div id="hint3" class="hint-content">
-                    ああああああああ
-                </div>
-            </div>
-        </div>
-    </div>
+      <p class="hint" onclick="toggleHint(13)">何をすればよいか分からない</p>
+      <div id="hint13" class="hint-content">
+        <p>"地図で表されているもののマークを参考に、<br>
+          てらめたる学園から音子ちゃんのいるカフェまでの道をたどろう。<br>
+          地図にはカフェが3つあるね。<br>
+          まずは、音子ちゃんのいるカフェがどこか突き止めよう！"</p>
+      </div>
+      <div class="margin">　</div>
 
+      <p class="hint" onclick="toggleHint(14)">カフェの道順のヒント</p>
+      <div id="hint14" class="hint-content">
+        <p class="hint" onclick="toggleHint(1)">音子ちゃんのいるカフェがどこか分からない</p>
+        <div id="hint1" class="hint-content">
+          <p>音子ちゃんとの電話をもう一度聞いてみても、<br>
+            行きつけのカフェにいるとしか言ってないみたい。<br>
+            誰か音子ちゃんの行きつけのカフェのことを話している人はいなかったかな？</p>
+          <p class="hint" onclick="toggleHint(2)">さらにヒント</p>
+          <div id="hint2" class="hint-content">
+            <p>聞き込み調査2の生徒によると『花屋の向かいのカフェで音子先生を見かけた』と言っていたね。<br>
+              つまり、音子ちゃんが今いるカフェは地図右下にある花屋の向かいのカフェってことだね！</p>
+            <p class="hint" onclick="toggleHint(3)">さらにさらにヒント</p>
+            <div id="hint3" class="hint-content">
+              <p>音子ちゃんのいるカフェは花屋の向かいだから、答えはみつばち！<br>
+                と思ったけど、どうやら違うみたい…<br>
+                地図だけでは分からない、どこか通れないところがあるのかも！</p>
+                <p class="hint" onclick="toggleHint(4)">ここから先はカフェまでの道順の答えです</p>
+              <div id="hint4" class="hint-content">
+                <p>聞き込み調査2の生徒によると『公園に面した十字路で工事をしている』『ノピ先生が通れなくて遅刻しそうになってた』と言っていたね。<br>
+                  つまり、みつばちの『つ』と『ば』の間にある交差点は工事中で通れないってこと！<br>
+                  その十字路を通らずに、音子ちゃんのいるカフェまでいく道をたどると、通ったひらがなは「まよいみち」になるね！</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="margin">　</div>
   </div>
 </body>
 
