--- a/opening.html
+++ b/opening.html
@@ -9,10 +9,12 @@
 </head>
 <body>
   <div class="quiz-container">
+
+    <img src="./quiz_files/logo.png" alt="クイズ画像" id="title-logo">
+
     <!-- 問題文 -->
     <div class="quiz-title">
-      <img src="./quiz_files/logo.png" alt="クイズ画像" id="title-logo">
-      <p>「てらめたる学園に隠されし秘宝」をご購入いただきありがとうございます！<br>
+      <p>「てらめたる学園に隠されし秘宝」を<br>ご購入いただきありがとうございます！<br>
         準備ができたらまずは動画を見てね！
       </p>
     </div>
@@ -28,7 +30,7 @@
     </div>
 
     <div class="quiz-title">
-      <h3>動画を見終わったら封筒1を開けて、次へを押そう</h3>
+      <h3>動画を見終わったら<br>封筒1を開けて、次へを押そう</h3>
     </div>
 
     <button onclick="location.href='./kikikomi.html'" id="submitAnswer">次へ</button>
