--- a/dasshutu.html
+++ b/dasshutu.html
@@ -15,6 +15,12 @@
     </div>
     <hr> <!-- 横線です -->
 
+    <div class = "mov-link-box">
+      <div><a href="https://www.youtube.com/embed/1771pZ3iRog?si=29mXJWlsNorakrtE" target="_blank"><button class = "link-btn">1つめの動画を見る</button></a></div>
+      <div><a href="https://www.youtube.com/embed/1771pZ3iRog?si=29mXJWlsNorakrtE" target="_blank"><button class = "link-btn">2つめの動画を見る</button></a></div>
+      <div><a href="https://www.youtube.com/embed/1771pZ3iRog?si=29mXJWlsNorakrtE" target="_blank"><button class = "link-btn">3つめの動画を見る</button></a></div>
+    </div>
+
     <!-- 画像表示部分 -->
     <div class="quiz-image">
       <!-- <img src="./quiz_files/still_3.jpg" alt="クイズ画像" id="quizImage"> -->
