--- a/ending.html
+++ b/ending.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>クイズページ</title>
+  <title>てらめたる学園に隠されし秘宝</title>
 
   <link rel="stylesheet" href="./quiz_files/main.css">
 </head>
@@ -42,6 +42,20 @@
     <!-- <button onclick="location.href='./opening.html'" id="submitAnswer">Xに感想を投稿する</button> -->
 
     <button onclick="postToX()" id="submitAnswer">クリアしたことをXで報告する！</button>
+
+    クレジット
+
+    運営：てらめたる学園
+    企画：数多エニ
+    謎制作：さーもん
+    イラスト：酉越くろう
+    デザイン：数多エニ
+    WEB制作：A#
+    スペシャルサンクス：
+    音子・エネルジコ
+    幽ヶ浦もち
+    ノピ・テュルーペ
+    なつめさんちのさや
     
   </div>
 </body>
