--- a/kikikomi.html
+++ b/kikikomi.html
@@ -15,7 +15,13 @@
       <img src="./quiz_files/logo.png" alt="クイズ画像" id="logo-min">
     </div>
     <hr> <!-- 横線です -->
-
+    <div class = "mov-link-box">
+    <div>
+    <a href="https://www.youtube.com/embed/1771pZ3iRog?si=29mXJWlsNorakrtE" target="_blank"><button class = "link-btn">1つめの動画を見る</button></a>
+    </div>
+    <div></div>
+    <div></div>
+    </div>
     <!-- 画像表示部分 -->
     <div class="quiz-image">
       <!-- <img src="./quiz_files/still_1.jpg" alt="クイズ画像"> -->
@@ -23,8 +29,8 @@
     </div>
 
     <!-- ストーリー文 -->
-    <p>エニ先生と一緒に学園内の生徒に聞き込みをすることになったあなた。<br>
-    <span class = "txt_red">聞き込み調査1～6の謎を解いて答えをひらがなで埋め<br>生徒たちからの情報を集めよう！</span>
+    <p>エニ先生と一緒に学園内の生徒に<br>聞き込みをすることになったあなた。<br>
+    <span class = "txt_red">聞き込み調査1～6の謎を解いて<br>答えを<span class = "txt_bold">ひらがな</span>で埋め<br>生徒たちからの情報を集めよう！</span>
     </p>
 
     <!-- 答え入力フォーム -->
