--- a/nekomata.html
+++ b/nekomata.html
@@ -15,6 +15,12 @@
     </div>
     <hr> <!-- 横線です -->
 
+    <div class = "mov-link-box">
+      <div><a href="https://www.youtube.com/embed/1771pZ3iRog?si=29mXJWlsNorakrtE" target="_blank"><button class = "link-btn">1つめの動画を見る</button></a></div>
+      <div><a href="https://www.youtube.com/embed/1771pZ3iRog?si=29mXJWlsNorakrtE" target="_blank"><button class = "link-btn">2つめの動画を見る</button></a></div>
+      <div></div>
+    </div>
+
     <!-- 画像表示部分 -->
     <div class="quiz-image">
       <!-- <img src="./quiz_files/still_2.jpg" alt="クイズ画像" id="quizImage"> -->
@@ -52,10 +58,10 @@
     <div class="hint-container" id="hintContainer" style="display: none;">
       <p class="hint" onclick="toggleHint(13)">何をすればよいか分からない</p>
       <div id="hint13" class="hint-content">
-        <p>"地図で表されているもののマークを参考に、<br>
+        <p>地図で表されているもののマークを参考に、<br>
           てらめたる学園から音子ちゃんのいるカフェまでの道をたどろう。<br>
           地図にはカフェが3つあるね。<br>
-          まずは、音子ちゃんのいるカフェがどこか突き止めよう！"</p>
+          まずは、音子ちゃんのいるカフェがどこか突き止めよう！</p>
       </div>
       <div class="margin">　</div>
 
