--- a/sagashimono.html
+++ b/sagashimono.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>クイズページ</title>
+  <title>てらめたる学園に隠されし秘宝</title>
 
   <link rel="stylesheet" href="./quiz_files/main.css">
 </head>
